--- a/client/src/app/feature/login/login.component.html
+++ b/client/src/app/feature/login/login.component.html
@@ -5,34 +5,26 @@
 	<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
 		<h1 class="text-3xl font-bold text-center">Login</h1>
 		<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-			<form class="space-y-6" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-				<div class="mb-4">
-					<label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-					<input type="email" id="email" formControlName="email"
-						   class="mt-1 block w-full px-3 py-2 border border-slate-200 bg-slate-50 rounded-md shadow-sm focus:outline-none focus:ring-slate-500 focus:border-slate-500 sm:text-sm"/>
-					@if (loginForm.get('email')?.invalid && loginForm.get('email')?.dirty) {
-						<div class="text-red-500 text-sm">
-							L'email est requis et doit être valide.
-						</div>
-					}
-				</div>
-				<div class="mb-4">
-					<label for="password" class="block text-sm font-medium text-gray-700">Mot de passe</label>
-					<input type="password" id="password" formControlName="password"
-						   class="mt-1 block w-full px-3 py-2 border border-slate-200 bg-slate-50 rounded-md shadow-sm focus:outline-none focus:ring-slate-500 focus:border-slate-500 sm:text-sm"/>
-					@if (loginForm.get('password')?.invalid && loginForm.get('password')?.dirty) {
-						<div class="text-red-500 text-sm">
-							Le mot de passe est requis.
-						</div>
-					}
-				</div>
-				<div class="mb-4">
-					<button [disabled]="loginForm.invalid" type="submit"
-							class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-slate-700 hover:bg-slate-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-						Login
-					</button>
-				</div>
-			</form>
+			<app-form [formGroup]="loginForm" (submitForm)="onSubmit()" gap="1.5rem">
+				<app-input
+					label="Email"
+					type="email"
+					id="email"
+					formControlName="email"
+				></app-input>
+				<app-input
+					label="Mot de passe"
+					type="password"
+					id="password"
+					formControlName="password"
+				></app-input>
+				<app-button
+					[disabled]="loginForm.invalid"
+					type="submit"
+					text="Login"
+					class="w-full text-white bg-slate-700 hover:bg-slate-800 focus:ring-2 focus:ring-offset-2 focus:ring-slate-700"
+				></app-button>
+			</app-form>
 			<a (click)="onClickRegister()" class="cursor-pointer">Inscription ?</a>
 		</div>
 	</div>
