--- a/client/src/app/feature/register/register.component.html
+++ b/client/src/app/feature/register/register.component.html
@@ -5,29 +5,32 @@
 	<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
 		<h1 class="text-3xl font-bold text-center">Register</h1>
 		<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-			<form class="space-y-6" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-				<div class="mb-4">
-					<label for="name" class="block text-sm font-medium text-gray-700">Name</label>
-					<input type="text" id="name" formControlName="name"
-						   class="mt-1 block w-full px-3 py-2 border border-slate-200 bg-slate-50 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-slate-700 sm:text-sm"/>
-				</div>
-				<div class="mb-4">
-					<label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-					<input type="email" id="email" formControlName="email"
-						   class="mt-1 block w-full px-3 py-2 border border-slate-200 bg-slate-50 rounded-md shadow-sm focus:outline-none focus:ring-slate-700 focus:border-slate-700 sm:text-sm"/>
-				</div>
-				<div class="mb-4">
-					<label for="password" class="block text-sm font-medium text-gray-700">Password</label>
-					<input type="password" id="password" formControlName="password"
-						   class="mt-1 block w-full px-3 py-2 border border-slate-200 bg-slate-50 rounded-md shadow-sm focus:outline-none focus:ring-slate-700 focus:border-slate-700 sm:text-sm"/>
-				</div>
-				<div class="mb-4">
-					<button [disabled]="registerForm.invalid" type="submit"
-							class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-slate-700 hover:bg-slate-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-slate-700">
-						Register
-					</button>
-				</div>
-			</form>
+			<app-form [formGroup]="registerForm" (submitForm)="onSubmit()">
+				<app-input
+					label="Name"
+					type="text"
+					id="name"
+					formControlName="name"
+				></app-input>
+				<app-input
+					label="Email"
+					type="email"
+					id="email"
+					formControlName="email"
+				></app-input>
+				<app-input
+					label="Password"
+					type="password"
+					id="password"
+					formControlName="password"
+				></app-input>
+				<app-button
+					[disabled]="registerForm.invalid"
+					type="submit"
+					text="Register"
+					class="w-full text-white bg-slate-700 hover:bg-slate-800 focus:ring-2 focus:ring-offset-2 focus:ring-slate-700"
+				></app-button>
+			</app-form>
 			<a (click)="onClickLogin()" class="cursor-pointer">Connexion ?</a>
 		</div>
 	</div>
