feat(NO-JIRA) Refactor form

--- a/client/src/app/feature/calendar/calendar/calendar.component.html
+++ b/client/src/app/feature/calendar/calendar/calendar.component.html
@@ -1,6 +1,6 @@
 <div class="calendar-header">
 	<app-calendar-toolbar (onPreviousMonth)="onClickPreviousMonth()" (onNextMonth)="onClickNextMonth()"
-						  [month]="month"></app-calendar-toolbar>
+						  [month]="month"/>
 </div>
 <div class="calendar-content">
 	<app-weeks/>
