--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -67,7 +67,7 @@
 				@if (isOpenNotifications) {
 					<div #notificationsContainer class="relative">
 						<app-notifications [isOpen]="isOpenNotifications"
-										   [notifications]="notifications"></app-notifications>
+										   [notifications]="notifications"/>
 					</div>
 				}
 			</div>
