--- a/client/src/app/feature/events/create/create.component.html
+++ b/client/src/app/feature/events/create/create.component.html
@@ -16,14 +16,14 @@
 				id="title"
 				formControlName="title"
 				[required]="true"
-			></app-input>
+			/>
 			<app-input
 				label="Description"
 				type="textarea"
 				id="description"
 				formControlName="description"
 				[required]="true"
-			></app-input>
+			/>
 			<div class="event-dates flex flex-col sm:flex-col md:flex-row lg:flex-row gap-2">
 				<app-input
 					label="Date de début"
@@ -31,15 +31,20 @@
 					id="startDate"
 					formControlName="startDate"
 					[required]="true"
-				></app-input>
+				/>
 				<app-input
 					label="Date de fin"
 					type="datetime-local"
 					id="endDate"
 					formControlName="endDate"
 					[required]="true"
-				></app-input>
+				/>
 			</div>
+			@if (addEventForm.errors?.['dateOrder']) {
+				<div class="text-red-500">
+					La date de début doit être antérieure à la date de fin.
+				</div>
+			}
 			<div class="participants flex flex-col gap-2 mb-2">
 				<label for="participants">Participants</label>
 				<div formArrayName="inUser">
@@ -50,13 +55,13 @@
 									[formControlName]="i"
 									placeholder="Email du participant"
 									type="email"
-								></app-input>
+								/>
 								<app-button
 									type="button"
 									text="✗"
 									(onClick)="removeParticipant(i)"
 									class="text-3xl bg-transparent text-slate-950 hover:bg-transparent"
-								></app-button>
+								/>
 							</div>
 						</div>
 					}
@@ -66,14 +71,14 @@
 					text="Ajouter un participant"
 					(onClick)="addParticipant()"
 					class="text-sm"
-				></app-button>
+				/>
 			</div>
 			<hr class="mb-2">
 			<app-button
 				[disabled]="addEventForm.invalid"
 				type="submit"
 				text="Créer l'évênement"
-			></app-button>
+			/>
 		</app-form>
 	</div>
 </div>
