--- a/client/src/app/feature/login/login.component.html
+++ b/client/src/app/feature/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="login container mx-auto justify-center flex flex-col py-12 px-6 lg:px-8">
 	@if (error) {
-		<app-error [error]="error"></app-error>
+		<app-error [error]="error"/>
 	}
 	<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-		<h1 class="text-3xl font-bold text-center">Login</h1>
+		<h1 class="text-3xl font-bold text-center">Connexion</h1>
 		<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
 			<app-form [formGroup]="loginForm" (submitForm)="onSubmit()" gap="1.5rem">
 				<app-input
@@ -11,19 +11,19 @@
 					type="email"
 					id="email"
 					formControlName="email"
-				></app-input>
+				/>
 				<app-input
 					label="Mot de passe"
 					type="password"
 					id="password"
 					formControlName="password"
-				></app-input>
+				/>
 				<app-button
 					[disabled]="loginForm.invalid"
 					type="submit"
-					text="Login"
+					text="Connexion"
 					class="w-full text-white bg-slate-700 hover:bg-slate-800 focus:ring-2 focus:ring-offset-2 focus:ring-slate-700"
-				></app-button>
+				/>
 			</app-form>
 			<a (click)="onClickRegister()" class="cursor-pointer">Inscription ?</a>
 		</div>
