--- a/client/src/app/shared/notifications/notifications.component.html
+++ b/client/src/app/shared/notifications/notifications.component.html
@@ -1,6 +1,6 @@
 <div class="notifications rounded-md border-solid border-2 border-slate-300 bg-slate-100">
 	@for (notification of notifications; track notification.id) {
-		<app-notification [notification]="notification"></app-notification>
+		<app-notification [notification]="notification"/>
 	} @empty {
 		<div class="text-center text-sm text-bold">
 			Aucune notification
