fix(NO-JIRA) Fix old gap on form

--- a/client/src/app/shared/edit-event/edit-event.component.html
+++ b/client/src/app/shared/edit-event/edit-event.component.html
@@ -1,6 +1,6 @@
 @if (event) {
 	<div class="my-1 rounded relative p-5 border-slate-300 border-solid border-s-2 bg-slate-100">
-		<app-form [formGroup]="eventForm" (submitForm)="onSubmitForm()" gap="1.5rem">
+		<app-form [formGroup]="eventForm" (submitForm)="onSubmitForm()">
 			<app-input
 				label="Titre"
 				type="text"
