--- a/client/src/app/feature/login/login.component.html
+++ b/client/src/app/feature/login/login.component.html
@@ -5,7 +5,7 @@
 	<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
 		<h1 class="text-3xl font-bold text-center">Connexion</h1>
 		<div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-			<app-form [formGroup]="loginForm" (submitForm)="onSubmit()" gap="1.5rem">
+			<app-form [formGroup]="loginForm" (submitForm)="onSubmit()">
 				<app-input
 					label="Email"
 					type="email"
